Notes align left fixed

--- a/src/client/app/cnext/framework/single-page-compare-view/shared/capability-compare/capability-compare.component.scss
+++ b/src/client/app/cnext/framework/single-page-compare-view/shared/capability-compare/capability-compare.component.scss
@@ -814,6 +814,7 @@
       margin-top: 5px;
       max-height: 7.1em !important;
       padding: 5px 15px 5px 5px !important;
+      text-align: left;
 
       &:before {
         bottom: 3px !important;
